[BISERVER-2096] Fixed z-index on tooltips

--- a/pentaho-gwt-widgets/src/org/pentaho/gwt/widgets/public/Widgets.css
+++ b/pentaho-gwt-widgets/src/org/pentaho/gwt/widgets/public/Widgets.css
@@ -77,6 +77,7 @@ which java class/code the style is associated with */
   border: 1px solid #666;
   background-color: #FAFAFA;
   max-width: 150px;
+  z-index: 200;
 }
 
 .tooltip-label{
